--- a/dist.ini
+++ b/dist.ini
@@ -3,24 +3,20 @@ author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
 
-[@Filter]
-bundle = @Classic
-remove = PodVersion
-remove = MetaYAML
-
-[AutoVersion]
-major = 0
-
-[MetaJSON]
-[NextRelease]
-[PodPurler]
-[Repository]
+[@RJBS]
 [PkgVersion]
 [ReadmeFromPod]
 
+[BuildRequires]
+Test::More          = 0.88
+Test::Deep          = 0
+SQL::Translator     = 0.11002
+DBD::SQLite         = 0
+Test::Exception     = 0
+parent              = 0
+
 [Prereq]
-parent          = 0
-DBIx::Class     = 0
-Test::More      = 0
-Test::Exception = 0
-Sub::Exporter   = 0
+DBIx::Class         = 0
+Sub::Exporter       = 0
+Lingua::EN::Inflect = 0
+; String::CamelCase = 0
