Import of FREW/DBIx-Class-Helpers-1.093500.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      1.093500
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-1.093500.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,10 @@ author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
 
+[@Git]
 [@RJBS]
+version = 1
+
 [PkgVersion]
 [ReadmeFromPod]
 
