Import of FREW/DBIx-Class-Helpers-2.00000_1.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      2.00000_1
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-2.00000_1.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -2,14 +2,25 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
+version          = 2.00000_1
 
 [@Git]
-[@RJBS]
-version = 1
+[@Filter]
+bundle = @Classic
+remove = PodVersion
+remove = MetaYAML
 
+[MetaJSON]
+[NextRelease]
+[PodWeaver]
+[Repository]
 [PkgVersion]
 [ReadmeFromPod]
 
+[DBICSgen]
+schema = TestSchema
+lib = lib
+lib = t/lib
 
 [Prereq]
 DBIx::Class         = 0.08100
@@ -17,7 +28,6 @@ Sub::Exporter       = 0
 Lingua::EN::Inflect = 0
 Test::More          = 0.88
 Test::Deep          = 0
-SQL::Translator     = 0.11002
 DBD::SQLite         = 0
 Test::Exception     = 0
 parent              = 0
