Import of FREW/DBIx-Class-Helpers-2.004000.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      2.004000
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-2.004000.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -2,20 +2,20 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.003002
+version          = 2.004000
 
+[NextRelease]
 [@Git]
 [@Filter]
-bundle = @Classic
-remove = PodVersion
+bundle = @Basic
 remove = MetaYAML
 
 [MetaJSON]
-[NextRelease]
 [PodWeaver]
 [Repository]
 [PkgVersion]
 [ReadmeFromPod]
+[PodSyntaxTests]
 
 [=inc::Dist::Zilla::Plugin::DBICSgen]
 schema = TestSchema
@@ -24,6 +24,7 @@ lib = t/lib
 
 [Prereq]
 DBIx::Class         = 0.08118
+DBIx::Class::Candy  = 0.001003
 Sub::Exporter       = 0
 Lingua::EN::Inflect = 0
 Test::More          = 0.88
