Import of FREW/DBIx-Class-Helpers-2.007001.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      2.007001
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-2.007001.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.007000
+version          = 2.007001
 
 [NextRelease]
 [@Git]
@@ -24,6 +24,7 @@ lib = t/lib
 
 [Prereqs]
 DBIx::Class         = 0.08127
+Carp::Clan          = 6.04
 DBIx::Class::Candy  = 0.001003
 Sub::Exporter       = 0
 Lingua::EN::Inflect = 0
