Import of FREW/DBIx-Class-Helpers-2.015000.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      2.015000
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-2.015000.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.014003
+version          = 2.015000
 
 [NextRelease]
 [@Git]
@@ -30,9 +30,9 @@ lib = t/lib
 DBIx::Class         = 0.08127
 Carp::Clan          = 6.04
 DBIx::Class::Candy  = 0.001003
-Sub::Exporter       = 0
+Sub::Exporter::Progressive = 0
 Lingua::EN::Inflect = 0
-Test::More          = 0.88
+Test::More          = 0.94
 Test::Deep          = 0
 DBD::SQLite         = 0
 Test::Exception     = 0
