--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.016005
+version          = 2.016006
 
 [NextRelease]
 [@Git]
@@ -12,6 +12,7 @@ version          = 2.016005
 repository.url = git://github.com/frioux/DBIx-Class-Helpers.git
 repository.web = http://github.com/frioux/DBIx-Class-Helpers
 repository.type = git
+bugtracker.web  = https://github.com/frioux/DBIx-Class-Helpers/issues
 
 [MetaJSON]
 [PodWeaver]
