--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.017000
+version          = 2.018000
 
 [NextRelease]
 [@Git]
@@ -16,7 +16,7 @@ bugtracker.web  = https://github.com/frioux/DBIx-Class-Helpers/issues
 
 [MetaJSON]
 [PodWeaver]
-[PkgVersion]
+[OurPkgVersion]
 [ReadmeFromPod]
 [PodSyntaxTests]
 
