--- a/dist.ini
+++ b/dist.ini
@@ -2,18 +2,12 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.018002
+version          = 2.018003
 
 [NextRelease]
 [@Git]
 [@Basic]
-
-[MetaResources]
-repository.url = git://github.com/frioux/DBIx-Class-Helpers.git
-repository.web = http://github.com/frioux/DBIx-Class-Helpers
-repository.type = git
-bugtracker.web  = https://github.com/frioux/DBIx-Class-Helpers/issues
-
+[GithubMeta]
 [MetaJSON]
 [PodWeaver]
 [OurPkgVersion]
@@ -25,17 +19,4 @@ schema = TestSchema
 lib = lib
 lib = t/lib
 
-[Prereqs]
-DBIx::Class         = 0.08127
-Carp::Clan          = 6.04
-DBIx::Class::Candy  = 0.001003
-Sub::Exporter::Progressive = 0.001006
-Lingua::EN::Inflect = 0
-Test::More          = 0.94
-Test::Deep          = 0
-DBD::SQLite         = 0
-Test::Exception     = 0
-parent              = 0
-String::CamelCase   = 0
-namespace::clean    = 0.23
-List::Util          = 0
+[Prereqs::FromCPANfile]
