Import of FREW/DBIx-Class-Helpers-2.019002.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      2.019002
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-2.019002.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -21,13 +21,17 @@ requires:
   Carp::Clan: 6.04
   DBIx::Class: 0.08127
   DBIx::Class::Candy: 0.001003
+  DBIx::Introspector: 0
   Lingua::EN::Inflect: 0
   List::Util: 0
+  Module::Runtime: 0
   String::CamelCase: 0
   Sub::Exporter::Progressive: 0.001006
+  Try::Tiny: 0
   namespace::clean: 0.23
   parent: 0
 resources:
+  bugtracker: https://github.com/frioux/DBIx-Class-Helpers/issues
   homepage: https://github.com/frioux/DBIx-Class-Helpers
   repository: https://github.com/frioux/DBIx-Class-Helpers.git
-version: 2.019001
+version: 2.019002
