--- a/dist.ini
+++ b/dist.ini
@@ -2,12 +2,14 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.019001
+version          = 2.019002
 
 [NextRelease]
 [@Git]
 [@Basic]
 [GithubMeta]
+issues = 1
+
 [MetaJSON]
 [PodWeaver]
 [OurPkgVersion]
