--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.019002
+version          = 2.019003
 
 [NextRelease]
 [@Git]
@@ -12,7 +12,7 @@ issues = 1
 
 [MetaJSON]
 [PodWeaver]
-[OurPkgVersion]
+[PkgVersion]
 [ReadmeFromPod]
 [PodSyntaxTests]
 
