--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires:
   DBD::SQLite: '0'
   DateTime::Format::SQLite: '0'
   Test::Deep: '0'
-  Test::Exception: '0'
+  Test::Fatal: '0.006'
   Test::More: '0.94'
   Test::Roo: '1.003'
 configure_requires:
@@ -37,4 +37,4 @@ resources:
   bugtracker: https://github.com/frioux/DBIx-Class-Helpers/issues
   homepage: https://github.com/frioux/DBIx-Class-Helpers
   repository: https://github.com/frioux/DBIx-Class-Helpers.git
-version: '2.025001'
+version: '2.025002'
