--- a/META.yml
+++ b/META.yml
@@ -9,10 +9,11 @@ build_requires:
   Test::Fatal: '0.006'
   Test::More: '0.94'
   Test::Roo: '1.003'
+  aliased: '0.34'
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
+generated_by: 'Dist::Zilla version 5.031, CPAN::Meta::Converter version 2.142060'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +22,7 @@ name: DBIx-Class-Helpers
 requires:
   Carp::Clan: '6.04'
   DBIx::Class: '0.0826'
-  DBIx::Class::Candy: '0.001003'
+  DBIx::Class::Candy: '0.003001'
   DBIx::Introspector: '0.001002'
   Lingua::EN::Inflect: '0'
   List::Util: '0'
@@ -37,4 +38,4 @@ resources:
   bugtracker: https://github.com/frioux/DBIx-Class-Helpers/issues
   homepage: https://github.com/frioux/DBIx-Class-Helpers
   repository: https://github.com/frioux/DBIx-Class-Helpers.git
-version: '2.025003'
+version: '2.026000'
