Import of FREW/DBIx-Class-Helpers-2.032000.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      2.032000
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-2.032000.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -27,6 +27,7 @@ requires:
   Lingua::EN::Inflect: '0'
   List::Util: '0'
   Module::Runtime: '0'
+  Moo: '2'
   Safe::Isa: '0'
   String::CamelCase: '0'
   Sub::Exporter::Progressive: '0.001006'
@@ -38,4 +39,4 @@ resources:
   bugtracker: https://github.com/frioux/DBIx-Class-Helpers/issues
   homepage: https://github.com/frioux/DBIx-Class-Helpers
   repository: https://github.com/frioux/DBIx-Class-Helpers.git
-version: '2.031000'
+version: '2.032000'
